Compilation endpoints